Couple of fixes and a bunch of tests